@@ -43,7 +43,7 @@ unit_system = metricwx
     WeeWX Skymap almanac extension example = Beispiel für die WeeWX-Erweiterung weewx-skymap-almanac-extension
     Sky map = Sternkarte
     Analemma = Analemma
-    'See <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension at GitHub</a> for more details.' = Für mehr Details siehe <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension auf  GitHub</a>.
+    'See <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension at GitHub</a> for more details.' = 'Für mehr Details siehe <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension auf GitHub</a>.'
     Altitude scale = Höhenskala
     Right ascension scale = Rektaszensionsskala
     Ecliptic = Ekliptik
