@@ -1,0 +1,56 @@
+###############################################################################
+#  Localization File --- Seasons skin                                         #
+#  French                                                                     #
+# Copyright (c) 2018-2021 Tom Keffer <tkeffer@gmail.com> and Matthew Wall     #
+# Copyright (c) 2021 Johanna Karen Roedenbeck                                 #
+# See the file LICENSE.txt for your rights.                                   #
+#                                                                             #
+#   Translation by "Cyril"                                                    #
+#               Revisité par Pascal Cambier le 30 mai 2022 (v2)               #
+#                   - modification de traductions foireuses                   #
+#                   - ajout de nouveaux tags                                  #
+###############################################################################
+
+# Generally want a metric system for the French language:
+unit_system = metricwx
+
+[Units]
+    
+    [[Labels]]
+        meter = " mètre", " mètres"
+        day = " jour", " jours"
+        hour = " heure", " heures"
+        minute = " minute", " minutes"
+        second = " seconde", " secondes"
+    
+    [[Ordinates]]
+        
+        # Ordinal directions. The last one should be for no wind direction
+        directions = N, NNE, NE, ENE, E, ESE, SE, SSE, S, SSO, SO, OSO, O, ONO, NO, NNO, N/A
+
+[Labels]
+    
+    # Set to hemisphere abbreviations suitable for your location:
+    hemispheres = N, S, E, O
+    
+    # Generic labels, keyed by an observation type.
+    [[Generic]]
+
+[Almanac]
+
+    # The labels to be used for the phases of the moon:
+    moon_phases = Nouvelle, Premier croissant, Premier quartier, Gibbeuse croissante, Pleine, Gibbeuse décroissante, Dernier quartier, Dernier croissant
+
+    Sky map = Carte du ciel
+    Ecliptic = Ecliptique
+    Constellation lines = Lignes des constellations
+
+[Texts]
+
+
+    [[Geographical]]
+        Altitude = Altitude    # As in height above sea level
+    
+    [[Astronomical]]
+        Altitude = Altitude    # As in angle above the horizon
+        
