@@ -18,3 +18,4 @@
 * visible horizon in sky map
 * path of Sun and Moon on sky
 * attribute `max_width`
+* french localization thanks to user Jterrettaz
